examples/policies/intercept-dns.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: intercept-all-dns
spec:
  endpointSelector:
    matchExpressions:
      - key: "io.kubernetes.pod.namespace"
        operator: "NotIn"
        values:
        - "kube-system"
      - key: "k8s-app"
        operator: "NotIn"
        values:
        - kube-dns
  enableDefaultDeny:
    egress: false
    ingress: false
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
          - port: "53"
            protocol: TCP
          - port: "53"
            protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
# ---
# # Below will deny all other traffic for all pods, you need to creare more policies to allow other traffic
# apiVersion: cilium.io/v2
# kind: CiliumClusterwideNetworkPolicy
# metadata:
#   name: allow-dns
# spec:
#   description: "Allow DNS traffic cluster-wide"
#   endpointSelector: {} # Matches all endpoints in the cluster
#   egress:
#     - toPorts:
#         - ports:
#             - port: "53"
#               protocol: UDP
#             - port: "53"
#               protocol: TCP
#   ingress:
#     - fromEndpoints:
#         - {}
#       toPorts:
#         - ports:
#             - port: "53"
#               protocol: UDP
#             - port: "53"
#               protocol: TCP
#           rules:
#             dns:
#               - matchPattern: "*"
